--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>fav color purple with pink being the runner up</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>South Bend Indiana</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Cooking and redaing books</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Engineer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Indiana</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To create webpages for some of my favorite brands, plus more</p>
     </section>
 
     <footer id="footer">
